--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,4 +91,9 @@
     </string>
     <string name="action_settings">Settings</string>
     <string name="you_offline">You offline, please find a network</string>
+    <string name="start_downloading">Start downloading..</string>
+    <string name="dir_cannot_be_created">The external storage directory cannot be found or created</string>
+    <string name="free_up_space">File is too large, please free up space</string>
+    <string name="external_storage_access_warning">External storage does not allow write operation, please remove protection</string>
+    <string name="nothing_to_update">Nothing to update</string>
 </resources>
